--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://adityasharma024.github.io/mywebsite",
+  "homepage": "https://adityasharma024.github.io/portfolio",
   "name": "portfolio",
   "private": false,
   "version": "0.0.0",
