--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "typed.js": "^2.1.0",
-
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -35,5 +34,5 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
-  }
+  } 
 }
